metadata/force-app/main/default/objects/Object_Info_Setting__mdt/Object_Info_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Object Info Settings</label>
    <pluralLabel>Object Info Settings</pluralLabel>
</CustomObject>