metadata/force-app/main/default/objects/Object_Info_Setting__mdt/fields/Display_Columns__c.field-meta.xml
<CustomField>
    <fullName>Display_Columns__c</fullName>
    <description>Number of columns to render in the LWC Object Info component.</description>
    <inlineHelpText>Number of columns to render in the LWC Object Info component.</inlineHelpText>
    <label>Display Columns</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>