metadata/force-app/main/default/objects/Object_Info_Setting__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>A comma delimited list of API field names for the target SObject and record type.</description>
    <inlineHelpText>A comma delimited list of API field names for the target SObject and record type.</inlineHelpText>
    <label>Fields</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>