metadata/force-app/main/default/objects/Object_Info_Setting__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>The API name for the SObject record type.</description>
    <inlineHelpText>The API name for the SObject record type.</inlineHelpText>
    <label>Record Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>